# incompliance-radar

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  spec.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
crates/crawler/: Cargo.toml
crates/crawler/src/: error.rs  html.rs  lib.rs
crates/crawler/src/sources/: common.rs  fca.rs  mod.rs  sec.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_create_compliance_cases.sql  0002_create_watch_rules_and_alerts.sql  0003_add_watch_rule_resolution_criteria.sql
crates/db/src/: alert_repository.rs  error.rs  filter.rs  lib.rs  sqlite.rs  sqlite_alerts.rs
crates/domain/: Cargo.toml
crates/domain/src/: alert.rs  case.rs  company.rs  lib.rs  monitor.rs  regime.rs  regulator.rs  resolution.rs  sanction.rs  trend_report.rs  violation.rs  watch_rule.rs
crates/extraction/: Cargo.toml
crates/extraction/src/: error.rs  lib.rs  parsed.rs  prompt.rs
crates/importer/: Cargo.toml
crates/importer/src/: lib.rs  map.rs  naics.rs  record.rs
crates/llm/: Cargo.toml
crates/llm/src/: config.rs  error.rs  lib.rs
crates/llm/src/providers/: anthropic.rs  ollama.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  getting-started.md  introduction.md  llm-backends.md  product-concept.md  roadmap.md
web/app/: Cargo.toml
web/app/src/: app.rs  lib.rs  seed.rs  server_fns.rs
web/frontend/: Cargo.toml
web/frontend/src/: lib.rs
web/server/: Cargo.toml
web/server/src/: main.rs
web/style/: main.css
