[package]
name = "db"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed persistence for compliance cases, behind a CaseRepository trait."

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
