[package]
name = "extraction"
version = "0.1.0"
edition = "2021"
description = "LLM-based structured extraction of compliance resolutions from raw filing text."

[dependencies]
domain = { path = "../domain" }
llm = { path = "../llm" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
