[package]
name = "llm"
version = "0.1.0"
edition = "2021"
description = "Pluggable LLM provider abstraction: local models via Ollama, frontier models via Anthropic."

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
